Implement SIMD statevector kernels